# simple_calculator

./: CMakeLists.txt  ProjectOptions.cmake  README.md  conanfile.py  package-lock.json  project.mts
.github/: constants.env
.github/workflows/: linux-build.yml  windows-build.yml
cmake/: Cache.cmake  CompilerCheck.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/simple_calculator/: calculator.hpp  sample_library.hpp  stack.hpp
scripts/: consts.mts  setupMSVCDev.mts  windowsSetupEnv.mts
src/: CMakeLists.txt
src/calculator/: CMakeLists.txt  calculator.cpp
src/gui/: CMakeLists.txt  displayer.cc  displayer.hpp  main.cc  mainwindow.cc  mainwindow.hpp
src/intro/: CMakeLists.txt  main.cc
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
